<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Tampilan">Tampilan</string>
    <string name="Email">Email</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="txPassword">Password</string>
    <string name="label2">Login Success</string>
    <string name="Pendaftaran">Pendaftaran</string>
    <string name="Daftar">Daftar</string>
    <string name="Nama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="epassword">Masukkan Password</string>
    <string name="erpassword">Masukkan Password Kembali</string>
    <string name="Alamat">Masukkan Alamat</string>
    <string name="LihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="DataKontak">Data Kontak</string>
    <string name="NamaItem">Nama Item</string>
    <string name="DetailKontak">Detail Kontak</string>
    <string name="NamaKontak"> Nama Kontak</string>
    <string name="notel">Nomor Telepon</string>
</resources>