<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLihatData">

  <TextView
      android:id="@+id/textView13"
      android:layout_width="208dp"
      android:layout_height="53dp"
      android:text="@string/DetailKontak"
      android:textSize="14pt"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.132" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="187dp"
      android:layout_height="41dp"
      android:text="@string/NamaKontak"
      android:textSize="11pt"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.477"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.35" />

  <TextView
      android:id="@+id/tvNamaKontak"
      android:layout_width="97dp"
      android:layout_height="32dp"
      android:text="@string/NamaKontak"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.258" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="192dp"
      android:layout_height="36dp"
      android:text="@string/notel"
      android:textSize="11pt"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.465"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.45" />

  <TextView
      android:id="@+id/tvNomorTelepon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/notel"
      android:textSize="11pt"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.543" />

</androidx.constraintlayout.widget.ConstraintLayout>